--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://callistonetwork.github.io/CS-DAPP",
+  "homepage": "./",
   "dependencies": {
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-poppop": "^1.5.0",
-    "react-scripts": "2.1.1",
-    "web3": "^1.0.0-beta.36"
+    "react-scripts": "2.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
